Tidying up theme

--- a/wordpress/wp-content/themes/Rapid-Platform-Base/style.css
+++ b/wordpress/wp-content/themes/Rapid-Platform-Base/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Rapid
+Theme Name: Rapid Platform Base
 Theme URI: http://underscores.me/
 Author: IT-Magique / Ben Woods (for Cohesive Business Solutions - www.becohesive.com)
 Author URI: http://underscores.me/
-Description: Base Theme
+Description: Base Theme for Rapid Platform
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
