--- a/wordpress/wp-content/plugins/megamenu/css/megamenu.scss
+++ b/wordpress/wp-content/plugins/megamenu/css/megamenu.scss
@@ -48,6 +48,7 @@
     margin: 0;
     padding: $panel_header_padding_top $panel_header_padding_right $panel_header_padding_bottom $panel_header_padding_left;
     vertical-align: top;
+    display: inline-block;
 }
 
 // resets
@@ -168,6 +169,10 @@
 			-moz-osx-font-smoothing: grayscale;
 		}
 
+		li.mega-menu-item.mega-hide-text a:before {
+		    margin: 0;
+		}
+
 		li.mega-align-bottom-left {
 			> ul.mega-sub-menu {
 
@@ -201,10 +206,19 @@
 		    display: inline-block;
 		    height: auto;
 
+		    &.mega-item-align-right {
+		        float: right;
+		    }
+
 		    @media only screen and (max-width : $responsive_breakpoint) { 
 		    	display: list-item; 
 		    	margin: 0 0 $menu_item_spacing 0;
 		    	clear: both;
+
+			    &.mega-item-align-right {
+			        float: none;
+			    }
+
 		    }
 
 			> a {
@@ -224,6 +238,7 @@
 			    @include border-radius($menu_item_link_border_radius_top_left, $menu_item_link_border_radius_top_right, $menu_item_link_border_radius_bottom_right, $menu_item_link_border_radius_bottom_left);
 				font-family: $menu_item_link_font;
 				font-size: $menu_item_link_font_size;
+				cursor: pointer;
 			}
 
 		}
@@ -252,18 +267,21 @@
 		    	width: 100%;
 		    }
 
-			@for $i from 1 through $number_of_columns {
-				> li.mega-menu-columns-#{$i} {
-					width: (100% / $number_of_columns) * $i;
-				}
-			}
+		    @for $of from 1 through 8 {
+
+		    	@for $cols from 1 through $of {
+
+					> li.mega-menu-columns-#{$cols}-of-#{$of} {
+						width: (100% / $of) * $cols;
+					}
+
+		    	}
+		    }
 
 		    @media only screen and (max-width : $responsive_breakpoint) { 
-				@for $i from 1 through $number_of_columns {
-					> li.mega-menu-columns-#{$i} {
-						width: 50%;
-						clear: none;
-					}
+				> li {
+					width: 50% !important;
+					clear: none;
 				}
 
 				> li:nth-child(odd) {
@@ -271,8 +289,16 @@
 				}
 		    }
 
+		    > li ul.mega-sub-menu {
+		    	clear: both;
+		    }
+
 		    > li ul.mega-sub-menu li ul.mega-sub-menu {
 		    	margin-left: 10px;
+		    }
+
+		    > li ul.mega-sub-menu li ul.mega-sub-menu li ul.mega-sub-menu {
+		    	margin-left: 20px;
 		    }
 
 		    > li.mega-menu-item {
@@ -310,13 +336,6 @@
 		    	position: static;
 		    	width: 100%;
 		    }
-
-			@for $i from 1 through $number_of_columns {
-				> li.mega-menu-columns-#{$i} {
-					width: 100%;
-					clear: both;
-				}
-			}
 
 		    li.mega-menu-item {
 
@@ -374,6 +393,13 @@
 			-ms-transform: rotate(0);
 			-o-transform: rotate(0);
 			transform: rotate(0);
+		}
+
+		// arrows
+		li.mega-menu-flyout.mega-menu-item-has-children.mega-hide-arrow > a:after,
+		li.mega-menu-flyout li.mega-menu-item-has-children.mega-hide-arrow > a:after,
+		> li.mega-menu-item-has-children.mega-hide-arrow > a:after {
+		    display: none;
 		}
 
 
