Add the ability to have left sidebars Add the ability to choose whether you want the right sidebar to be on top when responsive or not

--- a/wordpress/wp-content/themes/Rapid-Platform-Base/style.css
+++ b/wordpress/wp-content/themes/Rapid-Platform-Base/style.css
@@ -176,6 +176,31 @@ body {
 	padding-right: 20px;
 }
 
+/* Fix sidebars */
+
+.with-left-sidebar {
+	float: right;
+	max-width: 69%;
+	width: 100%;
+}
+
+.sidebar-left {
+	float: left;
+	max-width: 29%;
+	width: 100%;
+}
+
+.with-right-sidebar {
+	float: left;
+	max-width: 69%;
+	width: 100%;
+}
+
+.sidebar-right {
+	float: right;
+	max-width: 29%;
+	width: 100%;
+}
 
 /*--------------------------------------------------------------
 1.0 Reset
