--- a/wordpress/wp-content/themes/Rapid-Platform-Base/style.css
+++ b/wordpress/wp-content/themes/Rapid-Platform-Base/style.css
@@ -53,6 +53,7 @@ and Blueprint http://www.blueprintcss.org/
 --------------------------------------------------------------*/
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
+@import url("site-specific-styles.css");
 
 /*--------------------------------------------------------------
 0.0 Layout Options
