Update theme and author uri

--- a/wordpress/wp-content/themes/Rapid-Platform-Base/style.css
+++ b/wordpress/wp-content/themes/Rapid-Platform-Base/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: Rapid Platform Base
-Theme URI: http://underscores.me/
+Theme URI: https://github.com/ForbodingAngel/Rapid-Platform-Base
 Author: IT-Magique / Ben Woods
-Author URI: http://underscores.me/
+Author URI: http://www.it-magique.com
 Description: Base Theme for Rapid Platform
 Version: 1.0.0
 License: GNU General Public License v2 or later
