Allow menu background bar to span the entire screen width and the interior menu to only take up a set width

--- a/wordpress/wp-content/themes/Rapid-Platform-Base/style.css
+++ b/wordpress/wp-content/themes/Rapid-Platform-Base/style.css
@@ -335,6 +335,8 @@ body {
 
 #mega-menu-wrap-primary #mega-menu-primary {
   margin-top: -13px !important;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #mega-menu-wrap-primary input[type="checkbox"].mega-menu-toggle {
