--- a/wordpress/wp-content/themes/Rapid-Platform-Base/style.css
+++ b/wordpress/wp-content/themes/Rapid-Platform-Base/style.css
@@ -389,7 +389,7 @@ body {
 	max-width: 10.6% !important;
 }
 
-/* Responsive Embeds */
+/* Responsive Embeds via Shortcode */
 
 .embed-container { 
 	position: relative;
@@ -406,6 +406,14 @@ body {
 	height: 100%; 
 }
 
+/* Responsive embeds for wordpress objects */
+
+.video-container {
+	position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;
+}
+.video-container iframe, .video-container object, .video-container embed, .video-container video { 
+	position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+}
 
 /* Rapid Platform Fixes */
 
