--- a/wordpress/wp-content/themes/Rapid-Platform-Base/style.css
+++ b/wordpress/wp-content/themes/Rapid-Platform-Base/style.css
@@ -229,8 +229,10 @@ body {
 	color: #ffffff !important;
 	background-color: #e85805;
 	border-radius: 5px;
-	display: inline-block;
 	padding: 10px;
+	margin: auto;
+    text-align: center;
+    width: max-content;
 }
 
 .ctabutton:hover {
